--- a/.travis.yml
+++ b/.travis.yml
@@ -16,22 +16,22 @@ before_script:
 # Building and Tagging
 script:
   - docker --version # for Logging purposes print docker version
-  - docker build -t udagram-reverse-proxy ./udagram-reverse-proxy
-  - docker tag udagram-reverse-proxy h4rryk4y/udagram-reverse-proxy:latest
+  - docker build -t udagram-reverseproxy ./udagram-reverseproxy
+  - docker tag udagram-reverseproxy h4rryk4y/udagram-reverseproxy:v1
 
   - docker build -t udagram-frontend ./udagram-frontend
-  - docker tag udagram-frontend h4rryk4y/udagram-frontend:latest
+  - docker tag udagram-frontend h4rryk4y/udagram-frontend:v1
 
   - docker build -t udagram-api-feed ./udagram-api-feed
-  - docker tag udagram-api-feed h4rryk4y/udagram-api-feed:latest
+  - docker tag udagram-api-feed h4rryk4y/udagram-api-feed:v1
 
-  - docker build -t udagram-api-users ./udagram-api-user
-  - docker tag udagram-api-users h4rryk4y/udagram-api-user:latest
+  - docker build -t udagram-api-user ./udagram-api-user
+  - docker tag udagram-api-user h4rryk4y/udagram-api-user:v1
 
 # DOCKER_PASSWORD and DOCKER_USERNAME set in the Travis repository settings
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push h4rryk4y/reverse-proxy
-  - docker push h4rryk4y/udagram-frontend
-  - docker push h4rryk4y/udagram-api-users
-  - docker push h4rryk4y/udagram-api-feed
+  - docker push h4rryk4y/udagram-reverseproxy::v1
+  - docker push h4rryk4y/udagram-frontend::v1
+  - docker push h4rryk4y/udagram-api-user::v1
+  - docker push h4rryk4y/udagram-api-feed::v1
