--- a/deployment/ aws-secret.yaml
+++ b/deployment/ aws-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: aws-secret
 type: Opaque
 data:
-  credentials: aws_access_key_id = AKIAU4KBPLFYBRXFAYOC
-      aws_secret_access_key = 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
+  credentials: aws_access_key_id = AKIA2HOT4CSV2NQ7XXDU
+      aws_secret_access_key = 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
