--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,38 @@
 language: node_js
 node_js:
-  - 13
+  - 14
 
 services:
   - docker
 
-# Installations - Pre-testing
+# Pre-testing installs
 install:
   - echo "nothing needs to be installed"
 
-# Test scripts
+# Scripts to be run such as tests
 before_script:
   - echo "no tests"
 
-# Building and Tagging
+
+
+# Assuming the .travis.yml file is in the project directory, and there is a separate sub-directory for each service
+# Use either `docker-compose` or individual `docker build` commands
+# Build
 script:
-  - docker --version # for Logging purposes print docker version
-  - docker build -t udagram-reverseproxy ./udagram-reverseproxy
-  - docker tag udagram-reverseproxy h4rryk4y/udagram-reverseproxy:v1
-
-  - docker build -t udagram-frontend ./udagram-frontend
-  - docker tag udagram-frontend h4rryk4y/udagram-frontend:v1
-
   - docker build -t udagram-api-feed ./udagram-api-feed
-  - docker tag udagram-api-feed h4rryk4y/udagram-api-feed:v1
-
-  - docker build -t udagram-api-user ./udagram-api-user
-  - docker tag udagram-api-user h4rryk4y/udagram-api-user:v1
-
-# DOCKER_PASSWORD and DOCKER_USERNAME set in the Travis repository settings
+  - docker build -t udagram-frontend ./udagram-frontend
+  - docker build -t reverseproxy ./udagram-reverseproxy
+  - docker build -t udagram-api-user ./udagram-api-user 
+  # Tagging
+  - docker tag udagram-api-feed sebastiankru/udagram-api-feed:latest
+  - docker tag udagram-api-user sebastiankru/udagram-api-user:latest
+  - docker tag udagram-frontend sebastiankru/udagram-frontend:latest
+  - docker tag reverseproxy sebastiankru/reverseproxy:latest
+# Push
+# Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push h4rryk4y/udagram-reverseproxy::v1
-  - docker push h4rryk4y/udagram-frontend::v1
-  - docker push h4rryk4y/udagram-api-user::v1
-  - docker push h4rryk4y/udagram-api-feed::v1
+  - docker push sebastiankru/udagram-api-feed:latest
+  - docker push sebastiankru/udagram-api-user:latest
+  - docker push sebastiankru/udagram-frontend:latest
+  - docker push sebastiankru/reverseproxy:latest
