--- a/env-configmap.yaml
+++ b/env-configmap.yaml
@@ -1,12 +1,15 @@
 apiVersion: v1
 kind: ConfigMap
 data:
-  AWS_BUCKET: arn:aws:s3:::udacity-dev-p3
+  # AWS_BUCKET: arn:aws:s3:::udacity-dev-p3
+  AWS_BUCKET: arn:aws:s3:::us-dev-test3
   AWS_PROFILE: default
-  AWS_REGION: us-east-1
+  # AWS_REGION: us-east-1
+  AWS_REGION: us-west-2
   JWT_SECRET: hello
   POSTGRES_DB: udacitydevp3
-  POSTGRES_HOST: udacitydevp3.croizp0bgh6q.us-east-1.rds.amazonaws.com
+  # POSTGRES_HOST: udacitydevp3.croizp0bgh6q.us-east-1.rds.amazonaws.com
+  POSTGRES_HOST: udacitydevp3.c5nlbniwwuzs.us-west-2.rds.amazonaws.com
   URL: http://localhost:8080
   PORT: "8080"
 metadata:
