--- a/deployment/env-secret.yaml
+++ b/deployment/env-secret.yaml
@@ -5,5 +5,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRES_USERNAME: projectuda
-  POSTGRES_PASSWORD: projectuda
+  POSTGRES_USERNAME: udacitydevp3
+  POSTGRES_PASSWORD: udacitydevp3
